src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  background-color: #fff;
  padding: 80px 0;
}

img {
  max-width: 100%;
}

p {
  margin: 0;
}

h1,
h2,
h3,
h4 {
  margin: 0;
}

button {
  font-weight: 700 !important;
}

